Horizontal scroll fix

--- a/app/_calcifer.scss
+++ b/app/_calcifer.scss
@@ -52,6 +52,22 @@
 
 
 // -------------------------------------------------------------------//
+// HORIZONTAL SCROLL FIX
+// -------------------------------------------------------------------//
+// *
+// Fix for avoid the horizontal scroll caused for the first body .row descendants.
+// *
+
+body > .row {
+	margin-right: 0;
+	margin-left: 0;
+}
+
+
+
+
+
+// -------------------------------------------------------------------//
 // GRID GENERATOR
 // -------------------------------------------------------------------//
 // *
